@@ -51,12 +51,12 @@ setup(name = 'zope.intid',
                                   'zope.site']),
       install_requires = ['setuptools',
                           'ZODB3',
-                          'zope.container',
+                          'zope.lifecycleevent>=3.5.2',
                           'zope.component',
                           'zope.event',
                           'zope.interface',
                           'zope.keyreference',
-                          'zope.location',
+                          'zope.location>=3.5.4',
                           'zope.security',
                           ],
       include_package_data = True,
