@@ -5,6 +5,12 @@ CHANGES
 3.7.1 (unreleased)
 ------------------
 
+- Remove dependencies on ``zope.container``.  Instead import
+  ``Object*Event`` classes from ``zope.lifecycleevent`` and import
+  ``IContained`` from ``zope.location``.  In order to be able to do
+  this, depend on ``zope.lifecycleevent``>=3.5.2 and
+  ``zope.location``>=3.5.4.
+
 - Remove a dependency on ``zope.container.contained.Contained``
   (this is a dumb base class that defines __parent__ and __name__
   as None and declares that the class implements IContained).
